sshme-in/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: "initial"
