sshme-in/monitoring/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: allow-plaintext
spec:
  mtls:
    mode: PERMISSIVE
