sshme-in/monitoring/authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-plaintext
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
